<resources>
    <string name="app_name">Talent Marketplace</string>

    <string name="hint_companyName">Company Name</string>
    <string name="hint_jobTitle">Job Title</string>
    <string name="hint_jobDescription">Job Description</string>
    <string name="hint_startDate">Start Date</string>
    <string name="hint_endDate">End Date</string>
    <string name="hint_salaryRange">Salary Range</string>
    
    <string name="invalid_job_input">Company name, title, description cannot be empty</string>

    <string name="label_start_date">Start Date</string>
    <string name="label_salary_range">Salary Range</string>

    <string name="menu_addJob">Add</string>
    <string name="menu_cancelJob">Cancel</string>
    <string name="menu_deleteJob">Delete</string>

    <string name="button_addJob">Add Job</string>
    <string name="save_job">Save Job</string>

    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
</resources>